organize and format only